[Skill List] Adding endpoint to provide skills based on military
